logs/exceptions-2025-09-01.log
2025-09-01 00:28:24 [[31merror[39m]: uncaughtException: path is not defined
ReferenceError: path is not defined
    at Object.<anonymous> (/home/youssef/work/polaroid-wall/backend/config/server.js:36:29)
    at Module._compile (node:internal/modules/cjs/loader:1706:14)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (/home/youssef/work/polaroid-wall/app.js:2:1)
2025-09-01 00:28:47 [[31merror[39m]: uncaughtException: path is not defined
ReferenceError: path is not defined
    at Object.<anonymous> (/home/youssef/work/polaroid-wall/backend/config/server.js:36:29)
    at Module._compile (node:internal/modules/cjs/loader:1706:14)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (/home/youssef/work/polaroid-wall/app.js:2:1)
2025-09-01 09:43:24 [[31merror[39m]: uncaughtException: listen EADDRINUSE: address already in use 0.0.0.0:3000
Error: listen EADDRINUSE: address already in use 0.0.0.0:3000
    at Server.setupListenHandle [as _listen2] (node:net:1940:16)
    at listenInCluster (node:net:1997:12)
    at node:net:2206:7
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21)
2025-09-01 10:59:53 [[31merror[39m]: uncaughtException: Missing catch or finally after try
/home/youssef/work/polaroid-wall/backend/routes/auth.controller.js:86
  }
  ^

SyntaxError: Missing catch or finally after try
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (/home/youssef/work/polaroid-wall/backend/config/server.js:10:40)
2025-09-01 11:00:03 [[31merror[39m]: uncaughtException: Unexpected end of input
/home/youssef/work/polaroid-wall/backend/routes/auth.controller.js:92



SyntaxError: Unexpected end of input
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (/home/youssef/work/polaroid-wall/backend/config/server.js:10:40)
